--- a/ZhiXingWeb/Web.config
+++ b/ZhiXingWeb/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ZhiXingWeb-20150523113147;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ZhiXingWeb-20150523113147.mdf"/>
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\sqlexpress2012;Initial Catalog=zhixing;Integrated Security=True;"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0"/>
@@ -19,7 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
-    <httpRuntime/>
+    <httpRuntime maxRequestLength="1000000"  executionTimeout="3600" />
     <compilation debug="true" targetFramework="4.0"/>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880"/>
